# XAPI3

./: .gitignore  AllCppProjects.sln  CMakeLists.txt  CopyApiDll.bat  LICENSE  README.md  Synthetic.md  build.bat  build.sh  clear.bat  clearBin.bat  design.md
apis/ATP_Quote/: ATP_Quote.vcxproj  ATP_Quote.vcxproj.filters  Include.h  ReadMe.txt  stdafx.cpp
apis/ATP_Trade/: ATP_Trade.vcxproj  ATP_Trade.vcxproj.filters  Include.h  ReadMe.txt  stdafx.cpp
apis/CTP/: CServerConfig.cpp  CServerConfig.h  CUserConfig.cpp  CUserConfig.h  Makefile  README.md  TypeConvert.cpp  TypeConvert.h  include_pub.h
apis/CTPZQ_Quote/: CTPZQ_Quote.cpp  CTPZQ_Quote.vcxproj  CTPZQ_Quote.vcxproj.filters  Include.h  ReadMe.txt  Redefine.h  stdafx.cpp
apis/CTPZQ_Trade/: CTPZQ_Trade.cpp  CTPZQ_Trade.vcxproj  CTPZQ_Trade.vcxproj.filters  Include.h  ReadMe.txt  stdafx.cpp
apis/CTP_SE_Quote/: CTP_SE_Quote.vcxproj  CTP_SE_Quote.vcxproj.filters  Include.h
apis/CTP_SE_Trade/: CTP_SE_Trade.vcxproj  CTP_SE_Trade.vcxproj.filters  Include.h  ReadMe.txt
apis/CTP_SOPT_SE_Quote/: CTP_SOPT_SE_Quote.vcxproj  CTP_SOPT_SE_Quote.vcxproj.filters  Include.h  ReadMe.txt
apis/CTP_SOPT_SE_Trade/: CTP_SOPT_SE_Trade.vcxproj  CTP_SOPT_SE_Trade.vcxproj.filters  Include.h
apis/Kingstar_Quote/: Include.h  Kingstar_Quote.vcxproj  Kingstar_Quote.vcxproj.filters  ReadMe.txt  stdafx.cpp
apis/Kingstar_Trade/: Include.h  Kingstar_Trade.vcxproj  Kingstar_Trade.vcxproj.filters  ReadMe.txt  stdafx.cpp
apis/LTS_Query_v2/: LTS_Query_v2.vcxproj  LTS_Query_v2.vcxproj.filters  QueryApi.cpp  QueryApi.h  main.cpp
apis/LTS_Quote_v2/: LTS_Quote_v2.vcxproj  LTS_Quote_v2.vcxproj.filters  MdUserApi.cpp  MdUserApi.h  main.cpp
apis/LTS_Trade_v2/: LTS_Trade_v2.vcxproj  LTS_Trade_v2.vcxproj.filters  TraderApi.cpp  TraderApi.h  TypeConvert.cpp  TypeConvert.h  main.cpp
apis/REM_Quote/: CServerConfig.cpp  CServerConfig.h  CUserConfig.cpp  CUserConfig.h  MdUserApi.cpp  MdUserApi.h  REM_Quote.vcxproj  REM_Quote.vcxproj.filters  main.cpp  stdafx.cpp
apis/REM_Trade/: CProcessor.cpp  CProcessor.h  CServerConfig.cpp  CServerConfig.h  CUserConfig.cpp  CUserConfig.h  OrderMap.h  PositionManager.h  REM_Trade.vcxproj  REM_Trade.vcxproj.filters  TraderApi.cpp  TraderApi.h  TypeConvert.cpp  TypeConvert.h  main.cpp
apis/Sgit_Quote/: Include.h  ReadMe.txt  Sgit_Quote.vcxproj  Sgit_Quote.vcxproj.filters  stdafx.cpp
apis/Sgit_Trade/: Include.h  ReadMe.txt  Sgit_Trade.vcxproj  stdafx.cpp  stdafx.h
apis/Tap_Quote/: CServerConfig.cpp  CServerConfig.h  CUserConfig.cpp  CUserConfig.h  MdUserApi.cpp  MdUserApi.h  Tap_Quote.vcxproj
apis/Tap_Trade/: CProcessor.cpp  CProcessor.h  CServerConfig.cpp  CServerConfig.h  CUserConfig.cpp  CUserConfig.h  InstrumentManager.h  PositionManager.h  ReadMe.txt  Tap_Trade.vcxproj  Tap_Trade.vcxproj.filters  TraderApi.cpp  TraderApi.h  TypeConvert.cpp  TypeConvert.h  main.cpp
apis/TongShi_Quote/: DialogStockDrv.cpp  MdUserApi.cpp  MdUserApi.h  ReadMe.txt  TongShi_Quote.cpp  TongShi_Quote.h  TongShi_Quote.rc  TongShi_Quote.vcxproj  TongShi_Quote.vcxproj.filters  TypeConvert.cpp  TypeConvert.h  main.cpp  resource.h  stdafx.cpp
apis/UFX_Trade/: Log.h  OrderMap.h  TraderApi.cpp  TraderApi.h  UFX_Log.txt  UFX_Trade.vcxproj  UFX_Trade.vcxproj.filters  UFX日志_上午盘休时撤单.txt  UFX日志_订阅失败.txt  UFX日志_证券数量不对.txt  UFX日志_风控禁止.txt  main.cpp  stdafx.h  开发说明.txt
apis/Wind_Quote/: MdUserApi.cpp  MdUserApi.h  ReadMe.txt  Wind_Quote.rc  Wind_Quote.vcxproj  Wind_Quote.vcxproj.filters  main.cpp  resource.h  stdafx.cpp
apis/XTP/: TypeConvert.cpp  TypeConvert.h
apis/XTP_Quote/: Include.h
apis/XTP_Trade/: Include.h
common/License/: License.cpp  License.h  License.vcxproj  License.vcxproj.filters  LicenseMaker.cpp  README.md  ReadMe.txt  stdafx.cpp  stdafx.h
common/www/: CheckSignin.php  ConvertCode.vbs  DirFileFun.php  EnumFun.php  Home.php  JSON.php  Join.php  LicenseInfoAction.php  LicenseInfoAdd.php  LicenseInfoGenerate.php  LicenseInfoListView.php  LicenseInfoListView2.php  LicenseInfoListView99.php  LicenseInfoReview.php  LicenseInfoView.php  Logout.php  ProductInfoListView.php  Session.php  Signin.php  Signin_admin.php  Signup.php  SwitchUserID.php  User2ListView.php  UserInfoAction.php  UserInfoView.php  aboutus.php  config.php  安装方法.txt  开发计划.txt  表结构.txt
include/: ApiDataType.h  ApiEnum.h  ApiHeader.h  ApiProcess.cpp  ApiProcess.h  ApiStruct.h  CSubscribeManager.cpp  CSubscribeManager.h  CSubscribeManager1.cpp  CSubscribeManager1.h  CSubscribeManager2.cpp  CSubscribeManager2.h  CSyntheticCalculate_DepthMarketDataNField.cpp  CSyntheticCalculate_DepthMarketDataNField.h  ChinaStock.cpp  ChinaStock.h  CrossPlatform.h  IDGenerator.cpp  IDGenerator.h  QueueEnum.h  XApiC.def  XApiC.h  XApiCpp.h  inirw.cpp  inirw.h  switch_string.h  toolkit.cpp  toolkit.h
include/CTPZQ/: ZQThostFtdcMdApi.h  ZQThostFtdcTraderApi.h  ZQThostFtdcUserApiDataType.h  ZQThostFtdcUserApiStruct.h  error.dtd  error.xml  version.txt
include/REM/: EesTraderErr.h
include/Tap/: TapAPIError.h
include/UFX/: data_def.h  t2sdk_interface.h
include/Wind/: WAPIWrapperCpp.h
include/queue/: ArrayLockFreeQueue.h  ArrayLockFreeQueueImp.h  MsgQueue.h
include/synthetic/: CSyntheticConfig.cpp  CSyntheticConfig.h  CSyntheticInfos.cpp  CSyntheticInfos.h  CSyntheticManager.cpp  CSyntheticManager.h  CSyntheticMarketData.cpp  CSyntheticMarketData.h
languages/CSharp/: XAPI_CSharp.sln
languages/Java/: README.md  XAPI.h  jnaerator.bat
languages/MATLAB/: README.md
languages/Python/: MyXSpi.py  README.md  config.py  config_default.py  config_override.py  fix_stock_table.py  mail.py  runme.bat  runme_auto1.bat  runme_auto2.bat  runme_auto3.bat  test_ctp_api.py  test_ctp_sopt_api.py  流程说明.txt
languages/Server/: README.md  config.py  config_sim.py  config_sim_se.py  logging.yaml  requirements.txt  setup_logging.py  td_spi.py  test.txt  xapi_sio_server.py  xapi_td_downloader.py
lib/: XAPI_CPP_x86.lib
tests/COM/: TEST.vbs  TEST2.vbs  TEST_JS.htm  TEST_VBS.htm  注册COM组件的方法.txt
tests/CPP/: CPP_TEST.cpp  CPP_TEST.vcxproj  CPP_TEST.vcxproj.filters  Makefile  (+2 more)
(+151 files in other folders)
